header-flexbox-added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <div class="container">
         <nav>
           <a href="./index.html" class="logo header-logo"
