refresh-header-css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <nav>
+        <nav class="header-nav">
           <a href="./index.html" class="logo header-logo"
             >Web<span class="logo-part">Studio</span></a
           >
