full-css-refresh

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </section>
       <!-- Features section -->
-      <section>
+      <section class="features-section">
         <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
@@ -149,7 +149,7 @@
         </div>
       </section>
       <!-- Our Portfolio section -->
-      <section>
+      <section class="portfolio-section">
         <div class="container portfolio-container">
           <h2 class="portolio-tittle">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -165,7 +165,7 @@
                 <p class="product-type">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images/cashless-payment.jpg"
                 alt="cashless payment preview"
@@ -177,7 +177,7 @@
                 <p class="product-type">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images/meditation-app.jpg"
                 alt="miditation app preview"
@@ -189,7 +189,7 @@
                 <p class="product-type">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images/taxi-service.jpg"
                 alt="taxi service preview"
@@ -201,7 +201,7 @@
                 <p class="product-type">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images/screen-illustrations.jpg"
                 alt="screen illustrations preview"
@@ -213,7 +213,7 @@
                 <p class="product-type">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images/online-courses.jpg"
                 alt="online courses preview"
